--- a/common/src/main/resources/assets/mobdisguises/lang/en_us.json
+++ b/common/src/main/resources/assets/mobdisguises/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "gamerule.disguisedMobSpawnChance": "Disguised mob spawn chance.",
-  "gamerule.disguisedMobSpawnChance.description": "Percentage of mobs that spawn with a disguise."
+  "gamerule.disguisedMobSpawnChance": "Disguised mob spawn chance",
+  "gamerule.disguisedMobSpawnChance.description": "Percentage of mobs that spawn with a disguise"
 }
